# NutriLens

./: .dockerignore  .gitignore  Jenkinsfile  Makefile  Readme.md  agent-flow.md  docker-compose.langfuse.yml  docker-compose.yml
agents/: Dockerfile  main.py  pyproject.toml
agents/agents/: graph.py  supervisor.py
agents/agents/prompts/: meal_planning.txt  supervisor.txt
agents/tools/: food_nutrition.py  ocr.py  user_info.py  volume_predictor.py
agents/utils/: embedder.py  ingest_data.py  log_model_into_mlflow.py  minio_client.py  mlflow_client.py  postgresql.py  push_data_to_hf.py  push_model_to_hf.py
agents/volume_predictor/: __init__.py  dataset.py  depth_estimator.py  point_cloud_generator.py  volume_predictor.py
agents/volume_predictor/depth_anything_v2/: Readme.md
agents/volume_predictor/yolov8/: Readme.md  __init__.py  density_map.py  utils.py  yolov8.py  yolov8_seg.py
backend/: .env  Dockerfile  docker-compose.yml  pom.xml
frontend/: Dockerfile  Readme.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
iac/: Makefile  Readme.md
iac/ansible/: create_compute_instance.yaml  deploy_jenkins.yaml  destroy_compute_instance.yaml
iac/terraform/: main.tf  outputs.tf  variables.tf
k8s/: Chart.yaml  README.md  validate.sh  values.yaml
k8s/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  namespace.yaml  secret.yaml
mlflow/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
(+104 files in other folders)
