[project]
name = "Multi-agent-system"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "huggingface-hub>=0.36.0",
    "langchain>=1.0.5",
    "langchain-naver>=0.1.1",
    "langchain-naver-community>=0.2.0",
    "langfuse>=3.10.1",
    "langgraph>=1.0.2",
    "minio>=7.2.18",
    "mlflow>=3.6.0",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "open3d>=0.19.0",
    "opencv-python-headless>=4.12.0.88",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
    "torch>=2.7.0",
    "torchvision==0.22.0",
    "transformers>=4.57.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
